cw #3 full code

--- a/index.html
+++ b/index.html
@@ -5,7 +5,24 @@
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
- Hello my Master!   
+<body >
+
+<label style="text-align: center;width: 400px; display:inline-block"> 
+
+    Hello my Master!  
+
+</label>
+<label style="text-align: center;width: 400px;display:inline-block "> 
+
+    Hello my Master!  
+
+</label>
+
+<a href="http://www.google.com">
+
+<img src="google.png" alt=""
+style="width: 100px;">
+<label >google</label>
+</a>
 </body>
 </html>
