--- a/index.html
+++ b/index.html
@@ -6,23 +6,21 @@
     <title>Document</title>
 </head>
 <body >
-
-<label style="text-align: center;width: 400px; display:inline-block"> 
-
-    Hello my Master!  
-
-</label>
-<label style="text-align: center;width: 400px;display:inline-block "> 
-
-    Hello my Master!  
-
-</label>
-
+<a>
 <a href="http://www.google.com">
 
 <img src="google.png" alt=""
 style="width: 100px;">
 <label >google</label>
+
+<a href="https://ru.wikipedia.org/wiki/Slaughter_to_Prevail">
+<img src="STP.jpg" alt=""
+style="width: 200;">
+<label>Slaughter to Prevail</label>
+
 </a>
+
+
+
 </body>
 </html>
