--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body >
-<a>
+<body style="text-align: center;">
+<label style="text-align: center; width: 100px;display: inline-block;">
 <a href="http://www.google.com">
 
 <img src="google.png" alt=""
@@ -14,11 +14,27 @@ style="width: 100px;">
 <label >google</label>
 
 <a href="https://ru.wikipedia.org/wiki/Slaughter_to_Prevail">
-<img src="STP.jpg" alt=""
-style="width: 200;">
+<img src="sla.png" alt=""
+style="width: 150;">
 <label>Slaughter to Prevail</label>
 
-</a>
+<a href="https://web.telegram.org/k/">
+    <img src="telega.jfif" alt=""
+    style="width: 120;">
+    <label>telegram </label>
+
+    <a href="https://vk.com/feed">
+        <img src="vk.png" alt=""
+        style="width: 100;">
+        <label>Vkontakte</label>
+
+        <a href="https://www.youtube.com/">
+        <img src="You.png" alt=""
+        style="width: 150;">
+        <label>youtube</label>
+
+
+</label>
 
 
 
